--- a/css/main.css
+++ b/css/main.css
@@ -21,9 +21,8 @@ body{
 
 .message{
     background: rgba(255, 255, 0, 0.6);
-    transition: 300ms;
-
     color: #6a6900;
+    transition: 300ms;
 }
 
 
@@ -118,6 +117,8 @@ h2{
     font-weight: 900;
 }
 
+
+
 .todoBox{
     width: 70%;
     padding: 15px;
@@ -145,6 +146,16 @@ h2{
 .show{
     animation: fadeIn 500ms;
 }
+
+.hideList{
+    animation: listFadeOut 500ms;
+}
+
+@keyframes listFadeOut {
+  100%   { opacity: 0; height: 0px;}
+  0% { opacity: 1; height: inherit;}
+}
+
 @keyframes fadeIn {
   100%   { opacity: 1;  width: 70%}
   0% { opacity: 0; width: 0%}
