--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -1,19 +1,15 @@
 $backgroundColor: #c8c8c8;
 $mainColor: #f9f9f9;
-  
+
+/* Animation CSS below */
 @keyframes fadeIn {
-  100%   { opacity: 1;  width: 70%}
-  0% { opacity: 0; width: 0%}
+    100%    {opacity: 1;  transform: scaleY(1);}
+    0%    {opacity: 0; transform: scaleY(0);}
 }
 
 @keyframes fadeOut {
-  100%   { opacity: 0; width: 0%;}
-  0% { opacity: 1;  width: 70%;}
-}
-    
-@mixin navLinks{
-    font-family: 'Impact';
-    letter-spacing: 2px;
+    100%    {opacity: 0; transform: scaleY(0);}
+    0%    {opacity: 1; transform: scaleY(1);}
 }
 
 @mixin fontStyle{
@@ -22,7 +18,7 @@ $mainColor: #f9f9f9;
     border-radius: 3px;
     box-sizing: border-box;
 }
-
+/* Styling for boxes below */
 @mixin boxStyling{
     padding: 15px;
     padding-bottom: 20px;
