--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -6,6 +6,7 @@ body{
     padding: 0;
     margin: 0;
     .wrapper{
+        box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.05);
         background: $mainColor;
         header{
             /* All header styling goes here */
@@ -38,7 +39,7 @@ body{
                 button:hover{
                     background: #5c5c5c;
                 }    
-            }
+            } //End tag for input form
             #messageBox{
                 @include fontStyle;
                 border-radius: 5px;
@@ -64,7 +65,7 @@ body{
                 color: #026a00;
                 transition: 300ms;
             }
-        }
+        } //End tag for header
 
         main{
             /* All main styling goes here */
@@ -98,6 +99,7 @@ body{
                     background: #5c5c5c;    
                 }
             }
+            /* Added classes to run animation below */
             .hide{
                 animation: fadeOut 500ms;
             }
@@ -105,7 +107,7 @@ body{
             .show{
                 animation: fadeIn 500ms;
             }
-        }
+        } //End tag for main
 
         footer{
             /* All footer styling goes here */
@@ -127,6 +129,6 @@ body{
                 }
             }
             
-        }
-    }
-}
+        } //End tag for footer
+    } //End tag for wrapper
+} //End tag for body
