add pre-fixes + fixed bug with template literals..

--- a/scss/_desktop.scss
+++ b/scss/_desktop.scss
@@ -43,6 +43,6 @@ body{
             .underline{
                 width: 70%;
             }
-        } //End tag for footer
-    } //End tag for wrapper
-} //End tag for body
+        }
+    }
+}
