--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -6,7 +6,8 @@ body{
     padding: 0;
     margin: 0;
     .wrapper{
-        box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.05);
+        -webkit-box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.05);
+                box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.05);
         background: $mainColor;
         header{
             /* All header styling goes here */
@@ -34,6 +35,8 @@ body{
                     color: white;
                     border: none;
                     width: 80%;
+                    -webkit-transition: 0.4s;
+                    -o-transition: 0.4s;
                     transition: 0.4s;
                 }
                 button:hover{
@@ -53,16 +56,22 @@ body{
             .message{
                 background: rgba(255, 255, 0, 0.6);
                 color: #6a6900;   
+                -webkit-transition: 300ms;   
+                -o-transition: 300ms;   
                 transition: 300ms;
             }
             .wrong{
                 background: rgba(255, 0, 0, 0.6);
                 color:#6a0000;
+                -webkit-transition: 300ms;
+                -o-transition: 300ms;
                 transition: 300ms;
             }
             .success{
                 background: rgba(0, 255, 0, 0.6);
                 color: #026a00;
+                -webkit-transition: 300ms;
+                -o-transition: 300ms;
                 transition: 300ms;
             }
         } //End tag for header
@@ -101,11 +110,13 @@ body{
             }
             /* Added classes to run animation below */
             .hide{
-                animation: fadeOut 500ms;
+                -webkit-animation: fadeOut 500ms;
+                        animation: fadeOut 500ms;
             }
 
             .show{
-                animation: fadeIn 500ms;
+                -webkit-animation: fadeIn 500ms;
+                        animation: fadeIn 500ms;
             }
         } //End tag for main
 
@@ -129,6 +140,6 @@ body{
                 }
             }
             
-        } //End tag for footer
-    } //End tag for wrapper
-} //End tag for body
+        }
+    }
+}
